@@ -145,4 +145,49 @@ sub main
   return 0;
 }
 
+package App::plasm::wat;
+
+use Pod::Usage qw( pod2usage );
+use Getopt::Long qw( GetOptions );
+use Wasm::Wasmtime::Wat2Wasm qw( wat2wasm );
+use Path::Tiny qw( path );
+
+sub main
+{
+  local @ARGV = @_;
+
+  my @pod = (-verbose => 99, -sections => "SUBCOMMANDS/wat");
+
+  GetOptions(
+    'help|h'    => sub { pod2usage({ -exitval => 0, @pod }) },
+  ) or pod2usage({ -exitval => 2, @pod });
+
+  my $filename = shift @ARGV;
+
+  pod2usage({ @pod,
+    -exitval  => 2,
+  }) unless defined $filename;
+
+  pod2usage({ @pod,
+    -message => "File not found: $filename",
+    -exitval  => 2,
+  }) unless -f $filename;
+
+  my $in  = path($filename);
+  my $out = $in->parent->child(do {
+    my $basename = $in->basename;
+    $basename =~ s/\.wat$//;
+    $basename . '.wasm';
+  });
+
+  pod2usage({ @pod,
+    -message => "Output file already exists: $out",
+    -exitval  => 2,
+  }) if -e $out;
+
+  $out->spew_raw(wat2wasm($in->slurp_utf8));
+
+  return 0;
+}
+
 1;
